# py_example_etl

./: .coverage  .gitignore  LICENSE  Makefile  README.md  etl_config.yaml  pyproject.toml  setup.py
.github/: README.md  WORKFLOWS.md
.github/workflows/: docs.yml
data/: sample_employee_data.csv
docs/: README.md  index.html
scripts/: generate_docs.sh
src/py_spark_example/: __init__.py  config.py  spark_aggregator.py
test_reports/: junit.xml  pytest_report.html
tests/: README.md  __init__.py  conftest.py  conftest_new.py  test_spark_aggregator.py  test_spark_aggregator_edge_cases.py
